--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moses Ramirez-WDD131<title>
-    <link rel="stylesheet" href="styles/layout.css">
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Moses Ramirez - WDD 131</title>
+  <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
 
