--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -8,30 +8,12 @@
 </head>
 <body>
 
-  <header>
-    <h1>Header Content</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Nav Item 1</a></li>
-        <li><a href="#">Nav Item 2</a></li>
-        <li><a href="#">Nav Item 3</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <h2>Main Content</h2>
-    <p>This is the main area of the page.</p>
-  </main>
-
-  <aside>
-    <h2>Aside Content</h2>
-    <p>This is the aside section.</p>
-  </aside>
-
-  <footer>
-    <p>Footer Content</p>
-  </footer>
-
+<header>
+  <h1 contenteditable>Header</h1>
+</header>
+<div class="left-sidebar" contenteditable>Left Sidebar</div>
+<main contenteditable></main>
+<div class="right-sidebar" contenteditable>Right Sidebar</div>
+<footer contenteditable>Footer Content</footer>
 </body>
 </html>
