--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -8,12 +8,23 @@
 </head>
 <body>
 
-<header>
-  <h1 contenteditable>Header</h1>
-</header>
-<div class="left-sidebar" contenteditable>Left Sidebar</div>
-<main contenteditable></main>
-<div class="right-sidebar" contenteditable>Right Sidebar</div>
-<footer contenteditable>Footer Content</footer>
+  <header>
+    <h1 contenteditable>Header</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="left-sidebar" contenteditable>Left Sidebar</div>
+  <main contenteditable>Main Content</main>
+  <div class="right-sidebar" contenteditable>Right Sidebar</div>
+
+  <footer contenteditable>Footer Content</footer>
+
 </body>
 </html>
