--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -17,10 +17,10 @@
     <h1 contenteditable>Header</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="Home Page">Home</a></li>
+        <li><a href="About Me">About</a></li>
+        <li><a href="Future Projects">Projects</a></li>
+        <li><a href="Contact Us">Contact</a></li>
       </ul>
     </nav>
   </header>
