--- a/week01/index.html
+++ b/week01/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131</title>
     <link rel="stylesheet" href="styles.css">   
-</html>
+</head>
 <body>
     <header>
         <h1>WDD 131</h1>
@@ -18,6 +18,7 @@
             </ul>
         </nav>
     </header>
+</body>
     <main>
         <h2>Intex Page</h2>
         <p>This is the Intex page content.</p>
