--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Moses Ramirez | Learn HTML, CSS, and JavaScript basics to build pages.">
-    <title>WDD 131-Dynamic Web Fundametals - Moses Ramirez</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Student Name</title>
     <link rel="stylesheet" href="styles/base.css">
 
     <script src="scripts/getdates.js" defer></script>
@@ -26,15 +26,25 @@
         <section class="card left">
             <h2>About Me</h2>
             <div class="card-content">
-              <img src="images/profile.webp" alt="Moses Ramirez" width="50" height="100">
-              <div class="card-text">
-                <p>Hello! I'm Moses Ramirez, a student at BYU-Pathway studying web development. As far back as I could remember I wanted to get into software development.  Lets go!.</p>
-                </div>
+               <div class="card-text">
+               <p>Hello! I'm Moses Ramirez, a student at BYU-Pathway studying web development. As far back as I could remember I wanted to get into software development.  Currently I recide in Maui Hawaii truly excisted about this next term. Lets go!.</p>
+               <h3 class="fancy-underline">Maui, Hawaii</h3>
+               <img src="images/flag_of_hawaii.jpg" alt="Flag of Hawaii" width="100" height="50" class="rounded-image">
+               <p>Maui is the second largest of the Hawaiian Islands. It is known for its stunning beaches, lush landscapes, and vibrant culture. The island offers a mix of outdoor activities, including surfing, snorkeling, hiking, and exploring volcanic landscapes. Maui is also home to the famous Road to Hana, a scenic drive that takes you through rainforests, waterfalls, and coastal views.</p>
+               </div>
+               <img src="images/profile.webp" alt="Moses Ramirez" width="50" height="100" class="rounded-image"> 
             </div>
+            
         </section>
         <section class="card right">
                  <h2>Hobbies & Interests</h2>
-            <p>Gaming and computers have been a passion of mine since I was 4. I love to read, especially fantasy and science fiction novels.</p>
+                 <ul>
+                    <li>Gaming</li>
+                    <li>Cooking</li>
+                    <li>Cinema</li>
+                    <li>Computer</li>
+                    <li>Music</li>
+                 </ul>
         </section>
     </main>
     <footer>
