--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Moses Ramirez | Learn HTML, CSS, and JavaScript basics to build pages.">
-    <title>WDD 131 - Dynamic Web Fundamentals - Student Name</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Moses Ramirez</title>
     <link rel="stylesheet" href="styles/base.css">
 
     <script src="scripts/getdates.js" defer></script>
