--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Moses Ramirez | Learn HTML, CSS, and JavaScript basics to build pages.">
+    <meta name="author" content="Moses Ramirez">
     <title>WDD 131 - Dynamic Web Fundamentals - Moses Ramirez</title>
     <link rel="stylesheet" href="styles/base.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/getdates.js" defer></script>
 </head>
 </html>
 <body>
     <header>
+        <h1>Moses Ramirez</h1>
         <span id="course-title">WDD 131 - Dynamic Web Fundamentals - Moses Ramirez</span>
         <nav>
             <ul>
