--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/getdates.js" defer></script>
 </head>
-</html>
 <body>
     <header>
-        <h1>Moses Ramirez</h1>
-        <span id="course-title">WDD 131 - Dynamic Web Fundamentals - Moses Ramirez</span>
+        <h1>WDD 131 - Dynamic Web Fundamentals - Moses Ramirez</h1>
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com/in/moseslramirez/" target="_blank">LinkedIn</a></li>
                 <li><a href=" https://byupw.instructure.com/" target="_blank">Canvas</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/18?lang=eng" target="_blank">Scriptures</a></li> 
-                <li><a href="Final Project/index.html">Final Project</a></li>               
+                <li><a href="Final Project/index.html">Final Project</a></li>   
+                <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+                <li><a href="https://www.mozilla.org/en-US/firefox/new/" target="_blank">Firefox</a></li>
+                <li><a href="https://code.visualstudio.com/" target="_blank">VS Code</a></li>
+                            
             </ul>
         </nav>
     </header>
@@ -57,3 +59,4 @@
         <p id="lastmodified"></p>
     </footer>
 </body>
+</html>
