--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <header>
-        <h1>WDD 131 - Dynamic Web Fundamentals - Moses Ramirez</h1>
+        <h1>Moses Ramirez</h1>
+        <span id="course-title">WDD 131 - Dynamic Web Fundamentals</span>
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com/in/moseslramirez/" target="_blank">LinkedIn</a></li>
