--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 </head>
 <body>
     <header>
-        <h1>Moses Ramirez</h1>
-        <span id="course-title">WDD 131 - Dynamic Web Fundamentals</span>
+        <span id="course-title">WDD 131: Dynamic Web Fundamentals -</span> <h1>Moses Ramirez</h1> 
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com/in/moseslramirez/" target="_blank">LinkedIn</a></li>
                 <li><a href=" https://byupw.instructure.com/" target="_blank">Canvas</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/18?lang=eng" target="_blank">Scriptures</a></li> 
-                <li><a href="Final Project/index.html">Final Project</a></li>   
+                <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>   
                 <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
                 <li><a href="https://www.mozilla.org/en-US/firefox/new/" target="_blank">Firefox</a></li>
                 <li><a href="https://code.visualstudio.com/" target="_blank">VS Code</a></li>
