--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 <body>
     <header>
-        <span id="course-title">WDD 131: Dynamic Web Fundamentals -</span> <h1>Moses Ramirez</h1> 
+        <div class="header-container">
+            <div class="title-row">
+                <span id="course-title">WDD 131: Dynamic Web Fundamentals:</span> <h1>Moses Ramirez</h1>
+            </div> 
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com/in/moseslramirez/" target="_blank">LinkedIn</a></li>
                 <li><a href=" https://byupw.instructure.com/" target="_blank">Canvas</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/18?lang=eng" target="_blank">Scriptures</a></li> 
-                <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>   
-                <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
-                <li><a href="https://www.mozilla.org/en-US/firefox/new/" target="_blank">Firefox</a></li>
-                <li><a href="https://code.visualstudio.com/" target="_blank">VS Code</a></li>
+                <li><a href="Final Project" target="_blank">Final Project</a></li>
                             
             </ul>
         </nav>
