--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
                <div class="card-text">
                <p>Hello! I'm Moses Ramirez, a student at BYU-Pathway studying web development. As far back as I could remember I wanted to get into software development.  Currently I recide in Maui Hawaii truly excisted about this next term. Lets go!.</p>
                <h3 class="fancy-underline">Maui, Hawaii</h3>
-               <img src="images/flag_of_hawaii.jpg" alt="Flag of Hawaii" width="100" height="50" class="rounded-image">
                <p>Maui is the second largest of the Hawaiian Islands. It is known for its stunning beaches, lush landscapes, and vibrant culture. The island offers a mix of outdoor activities, including surfing, snorkeling, hiking, and exploring volcanic landscapes. Maui is also home to the famous Road to Hana, a scenic drive that takes you through rainforests, waterfalls, and coastal views.</p>
                </div>
+               <div class="flag-container">
+               <img src="images/flag_of_hawaii.jpg" alt="Flag of Hawaii">
+               <p class="flag-caption">Hawaii, USA</p>
+               </div>
                <img src="images/profile.webp" alt="Moses Ramirez" width="50" height="100" class="rounded-image"> 
-            </div>
+               </div>
             
         </section>
         <section class="card right">
