--- a/index.html
+++ b/index.html
@@ -35,21 +35,24 @@
                <div class="card-text">
                <p>Hello! I'm Moses Ramirez, a student at BYU-Pathway studying web development. As far back as I could remember I wanted to get into software development.  Currently I recide in Maui Hawaii truly excisted about this next term. Lets go!.</p>
                <h3 class="fancy-underline">Maui, Hawaii</h3>
-               <p>Maui is the second largest of the Hawaiian Islands. It is known for its stunning beaches, lush landscapes, and vibrant culture. The island offers a mix of outdoor activities, including surfing, snorkeling, hiking, and exploring volcanic landscapes. Maui is also home to the famous Road to Hana, a scenic drive that takes you through rainforests, waterfalls, and coastal views.</p>
-               </div>
+               <div class="card-text-2">
                <div class="flag-container">
+                <div class="flag-and-caption">
                <img src="images/flag_of_hawaii.jpg" alt="Flag of Hawaii">
                <p class="flag-caption">Hawaii, USA</p>
+                </div>
+                <p>Maui is the second largest of the Hawaiian Islands. It is known for its stunning beaches, lush landscapes, and vibrant culture. The island offers a mix of outdoor activities, including surfing, snorkeling, hiking, and exploring volcanic landscapes. Maui is also home to the famous Road to Hana, a scenic drive that takes you through rainforests, waterfalls, and coastal views.</p>
+               </div>   
+               </div>
                </div>
                <img src="images/profile.webp" alt="Moses Ramirez" width="50" height="100" class="rounded-image"> 
                </div>
-            
         </section>
         <section class="card right">
                  <h2>Web Dev Resources</h2>
                  <ul>
                     <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>   
-                    <li><a href="https://dev.to/about/" target="blank">DevTo</a>" 
+                    <li><a href="https://dev.to/about/" target="blank">DevTo</a> 
                     <li><a href="https://css-tricks.com/" target="blank">CSS Tricks</a></li>
                     <li><a href="https://code.visualstudio.com/" target="blank">VS Code</a></li>
                     <li><a href="https://imageplaceholder.net/" target="blank">Image Place Holder</a></li>
