--- a/index.html
+++ b/index.html
@@ -16,53 +16,55 @@
     <header>
         <div class="header-container">
             <div class="title-row">
-                <span id="course-title">WDD 131: Dynamic Web Fundamentals:</span> <h1>Moses Ramirez</h1>
+                <h1><span id="course-title">WDD 131: Dynamic Web Fundamentals:</span> Moses Ramirez</h1>
             </div> 
-        <nav>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/moseslramirez/" target="_blank">LinkedIn</a></li>
-                <li><a href=" https://byupw.instructure.com/" target="_blank">Canvas</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/18?lang=eng" target="_blank">Scriptures</a></li> 
-                <li><a href="" target="_blank">Final Project</a></li>
-                            
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/moseslramirez/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://byupw.instructure.com/" target="_blank">Canvas</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/18?lang=eng" target="_blank">Scriptures</a></li> 
+                    <li><a href="#" target="_blank">Final Project</a></li>
+                </ul>
+            </nav>
+        </div> <!-- Close header-container -->
     </header>
+
     <main>
         <section class="card left">
             <h2>About Me</h2>
             <div class="card-content">
-               <div class="card-text">
-               <p>Hello! I'm Moses Ramirez, a student at BYU-Pathway studying web development. As far back as I could remember I wanted to get into software development.  Currently I recide in Maui Hawaii truly excisted about this next term. Lets go!.</p>
-               <h3 class="fancy-underline">Maui, Hawaii</h3>
-               <div class="card-text-2">
-               <div class="flag-container">
-                <div class="flag-and-caption">
-               <img src="images/flag_of_hawaii.jpg" alt="Flag of Hawaii">
-               <p class="flag-caption">Hawaii, USA</p>
+                <div class="card-text">
+                    <p>Hello! I'm Moses Ramirez, a student at BYU-Pathway studying web development. As far back as I can remember, I wanted to get into software development. Currently, I reside in Maui, Hawaii and I'm truly excited about this next term. Let's go!</p>
+                    <h3 class="fancy-underline">Maui, Hawaii</h3>
+                    <div class="card-text-2">
+                        <div class="flag-container">
+                            <div class="flag-and-caption">
+                                <img src="images/flag_of_hawaii.jpg" alt="Flag of Hawaii">
+                                <p class="flag-caption">Hawaii, USA</p>
+                            </div>
+                            <p>Maui is the second largest of the Hawaiian Islands. It is known for its stunning beaches, lush landscapes, and vibrant culture. The island offers a mix of outdoor activities, including surfing, snorkeling, hiking, and exploring volcanic landscapes. Maui is also home to the famous Road to Hana, a scenic drive that takes you through rainforests, waterfalls, and coastal views.</p>
+                        </div>   
+                    </div>
                 </div>
-                <p>Maui is the second largest of the Hawaiian Islands. It is known for its stunning beaches, lush landscapes, and vibrant culture. The island offers a mix of outdoor activities, including surfing, snorkeling, hiking, and exploring volcanic landscapes. Maui is also home to the famous Road to Hana, a scenic drive that takes you through rainforests, waterfalls, and coastal views.</p>
-               </div>   
-               </div>
-               </div>
-               <img src="images/profile.webp" alt="Moses Ramirez" width="50" height="100" class="rounded-image"> 
-               </div>
+                <img src="images/profile.webp" alt="Moses Ramirez" width="50" height="100" class="rounded-image"> 
+            </div>
         </section>
+
         <section class="card right">
-                 <h2>Web Dev Resources</h2>
-                 <ul>
-                    <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>   
-                    <li><a href="https://dev.to/about/" target="blank">DevTo</a> 
-                    <li><a href="https://css-tricks.com/" target="blank">CSS Tricks</a></li>
-                    <li><a href="https://code.visualstudio.com/" target="blank">VS Code</a></li>
-                    <li><a href="https://imageplaceholder.net/" target="blank">Image Place Holder</a></li>
-                    <li><a href="https://https://squoosh.app/" target="blank">Squoosh</a></li>
-                
-                 </ul>
+            <h2>Web Dev Resources</h2>
+            <ul>
+                <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>   
+                <li><a href="https://dev.to/about/" target="_blank">DevTo</a></li>
+                <li><a href="https://css-tricks.com/" target="_blank">CSS Tricks</a></li>
+                <li><a href="https://code.visualstudio.com/" target="_blank">VS Code</a></li>
+                <li><a href="https://imageplaceholder.net/" target="_blank">Image Place Holder</a></li>
+                <li><a href="https://squoosh.app/" target="_blank">Squoosh</a></li>
+            </ul>
         </section>
     </main>
+
     <footer>
-        <p><span id="currentyear"></span>  Moses Ramirez | 🌴 Hawaii 🌴, USA</p>
+        <p><span id="currentyear"></span> Moses Ramirez | 🌴 Hawaii 🌴, USA</p>
         <p id="lastmodified"></p>
     </footer>
 </body>
