--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Moses Ramirez | Learn HTML, CSS, and JavaScript basics to build pages.">
     <meta name="author" content="Moses Ramirez">
     <title>WDD 131 - Dynamic Web Fundamentals - Moses Ramirez</title>
+    
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+    
     <script src="scripts/getdates.js" defer></script>
+
 </head>
 <body>
     <header>
     <div class="header-container">
         <div class="title-row">
-            <h1><span id="course-title">WDD 131: Dynamic Web Fundamentals:</span> Moses Ramirez</h1>
+            <span id="course-title">WDD 131: Dynamic Web Fundamentals:</span> <h1>Moses Ramirez</h1>
         </div> 
         <nav>
             <ul>
@@ -65,8 +68,10 @@
     </main>
 
     <footer>
-        <p><span id="currentyear"></span> Moses Ramirez | 🌴 Hawaii 🌴, USA</p>
+        <span id="currentyear"></span> 
+        <p>Moses Ramirez | 🌴 Hawaii 🌴, USA</p>
         <p id="lastmodified"></p>
+
     </footer>
 </body>
 </html>
