--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
     </main>
 
     <footer>
-        <span id="currentyear"></span> 
-        <p>Moses Ramirez | 🌴 Hawaii 🌴, USA</p>
+        <p><span id="currentyear"> </span> Moses Ramirez | 🌴 Hawaii 🌴, USA</p>
         <p id="lastmodified"></p>
 
     </footer>
