--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
     <meta name="author" content="Moses Ramirez">
     <title>WDD 131 - Dynamic Web Fundamentals - Moses Ramirez</title>
     
-    <link rel="stylesheet" href="styles/base.css" media="print" onload="this.onload=null;this.removeAttribute('media');">
-    <noscript><link rel="stylesheet" href="styles/base.css"></noscript>
-
-
+    <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap"></noscript>
-
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     
     <script src="scripts/getdates.js" defer></script>
 
@@ -73,7 +68,7 @@
     </main>
 
     <footer>
-        <p><span id="currentyear"> </span> Moses Ramirez | 🌴 Hawaii 🌴, USA</p>
+        <p>©<span id="currentyear"> </span> Moses Ramirez | 🌴 Hawaii 🌴, USA</p>
         <p id="lastmodified"></p>
 
     </footer>
