--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>   
                     </div>
                 </div>
-                <img src="images/profile.webp" alt="Moses Ramirez" width="50" height="100" class="rounded-image"> 
+                <img src="images/profile.jpg" alt="Moses Ramirez" width="50" height="100" class="rounded-image"> 
             </div>
         </section>
 
