--- a/temple.html
+++ b/temple.html
@@ -6,16 +6,17 @@
   <meta name="description" content="A gallery of temple images with responsive design and a hamburger menu." />
   <title>Temple Album</title>
 
-  <!-- Google Fonts -->
+ 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display&display=swap" rel="stylesheet">
 
-  <!-- Mobile-First CSS -->
-  <link rel="stylesheet" href="temples.css" />
+ 
+  <link rel="stylesheet" href="temples.css" media="all" />
 
-  <!-- Larger View CSS -->
+
   <link rel="stylesheet" href="temples-large.css" media="(min-width: 768px)" />
-
-  <!-- JavaScript File (deferred) -->
+  
   <script src="temples.js" defer></script>
 </head>
 <body>
@@ -23,7 +24,7 @@
   <header>
     <h1>Temple Album</h1>
     
-    <!-- Hamburger Button (visible on mobile only) -->
+  
     <button id="menuBtn" aria-label="Menu">☰</button>
     
     <nav id="mainNav">
@@ -38,47 +39,42 @@
   <main>
     <h2>Temple Gallery</h2>
     <div class="grid-container">
-      <!-- Repeat this figure 9 times with different captions -->
       <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 1</figcaption>
+        <img src="images/aba_nigeria_temple_lds.jpg" alt="Aba Nigeria Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Aba Nigeria Temple</figcaption> 
+        </figure>
+      <figure>
+        <img src="images/madrid_spain_mormon_temple.jpg" alt="Madrid Spain Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Madrid Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 2</figcaption>
+        <img src="images/brasilia_brazil_temple_exterior.jpg" alt="Brasilia Brazil Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Brasilia Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 3</figcaption>
+        <img src="images/rexburg_temple.jpg" alt="Rexburg Idaho Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Rexburg Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 4</figcaption>
+        <img src="images/houston_temple_lds.jpg" alt="Houston Texas Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Houston Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 5</figcaption>
+        <img src="images/albuquerque_temple_lds.jpg" alt="Albuquerque New Mexico Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Albuquerque Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 6</figcaption>
+        <img src="images/washington_dc_temple.jpg" alt="Washington DC Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Washington DC Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 7</figcaption>
+        <img src="images/hermosillo_sonora_mexico_temple_lds.jpg" alt="Hermosillo Sonora Mexico Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Hermosillo Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 8</figcaption>
+        <img src="images/ogden_utah_temple_exterior_lds.jpg" alt="Ogden Utah Temple" width="300" height="200" loading="lazy"/>
+        <figcaption>Ogden Temple</figcaption> 
       </figure>
-      <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 9</figcaption>
-      </figure>
-        <figure>
-        <img src="images/temple-placeholder.jpg" alt="Temple Placeholder" />
-        <figcaption>Temple 10</figcaption>
-      </figure>    
     </div>
   </main>
 
