--- a/temples.html
+++ b/temples.html
@@ -17,7 +17,8 @@
 
   <link rel="stylesheet" href="temples-large.css" media="(min-width: 768px)" />
   
-  <script src="temples.js" defer></script>
+  <script src="scripts/temples.js" defer></script>
+
 </head>
 <body>
 
