--- a/temples.html
+++ b/temples.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="A gallery of temple images with responsive design and a hamburger menu." />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A gallery of temple images with responsive design and a hamburger menu.">
   <title>Temple Album</title>
 
- 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display&display=swap" rel="stylesheet">
 
- 
-  <link rel="stylesheet" href="temples.css" media="all" />
+  <link rel="stylesheet" href="temples.css" media="all">
+  <link rel="stylesheet" href="temples-large.css" media="(min-width: 768px)">
 
-
-  <link rel="stylesheet" href="temples-large.css" media="(min-width: 768px)" />
-  
   <script src="scripts/temples.js" defer></script>
-
 </head>
+
 <body>
 
   <header>
