--- a/temples.html
+++ b/temples.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="temples.css" media="all">
-  <link rel="stylesheet" href="temples-large.css" media="(min-width: 768px)">
+  <link rel="stylesheet" href="styles/temples.css" media="all">
+  <link rel="stylesheet" href="styles/temples-large.css" media="(min-width: 768px)">
 
   <script src="scripts/temples.js" defer></script>
 </head>
