--- a/temples.html
+++ b/temples.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A gallery of temple images with responsive design and a hamburger menu.">
+  <meta name="author" content="Moses Ramirez">
+  <meta name="keywords" content="temple, gallery, images, responsive design, hamburger menu">
   <title>Temple Album</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
