--- a/temples.html
+++ b/temples.html
@@ -37,39 +37,39 @@
     <h2>Temple Gallery</h2>
     <div class="grid-container">
       <figure>
-        <img src="images/aba_nigeria_temple_lds.jpg" alt="Aba Nigeria Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/aba_nigeria_temple_lds.jpg" alt="Aba Nigeria Temple" width="300" height="200" loading="lazy">
         <figcaption>Aba Nigeria Temple</figcaption> 
         </figure>
       <figure>
-        <img src="images/madrid_spain_mormon_temple.jpg" alt="Madrid Spain Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/madrid_spain_mormon_temple.jpg" alt="Madrid Spain Temple" width="300" height="200" loading="lazy">
         <figcaption>Madrid Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/brasilia_brazil_temple_exterior.jpg" alt="Brasilia Brazil Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/brasilia_brazil_temple_exterior.jpg" alt="Brasilia Brazil Temple" width="300" height="200" loading="lazy">
         <figcaption>Brasilia Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/rexburg_temple.jpg" alt="Rexburg Idaho Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/rexburg_temple.jpg" alt="Rexburg Idaho Temple" width="300" height="200" loading="lazy">
         <figcaption>Rexburg Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/houston_temple_lds.jpg" alt="Houston Texas Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/houston_temple_lds.jpg" alt="Houston Texas Temple" width="300" height="200" loading="lazy">
         <figcaption>Houston Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/albuquerque_temple_lds.jpg" alt="Albuquerque New Mexico Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/albuquerque_temple_lds.jpg" alt="Albuquerque New Mexico Temple" width="300" height="200" loading="lazy">
         <figcaption>Albuquerque Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/washington_dc_temple.jpg" alt="Washington DC Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/washington_dc_temple.jpg" alt="Washington DC Temple" width="300" height="200" loading="lazy">
         <figcaption>Washington DC Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/hermosillo_sonora_mexico_temple_lds.jpg" alt="Hermosillo Sonora Mexico Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/hermosillo_sonora_mexico_temple_lds.jpg" alt="Hermosillo Sonora Mexico Temple" width="300" height="200" loading="lazy">
         <figcaption>Hermosillo Temple</figcaption>
       </figure>
       <figure>
-        <img src="images/ogden_utah_temple_exterior_lds.jpg" alt="Ogden Utah Temple" width="300" height="200" loading="lazy"/>
+        <img src="images/ogden_utah_temple_exterior_lds.jpg" alt="Ogden Utah Temple" width="300" height="200" loading="lazy">
         <figcaption>Ogden Temple</figcaption> 
       </figure>
     </div>
