--- a/temples.html
+++ b/temples.html
@@ -75,9 +75,12 @@
     </div>
   </main>
 
-  <footer>
-    <p>&copy; <span id="year"></span> | Moses Ramirez | Last Updated: <span id="lastModified"></span></p>
-  </footer>
+<footer>
+  <p>
+    &copy;<span id="year"></span> Moses Ramirez Maui Hawaii<br>
+    Last Modification: <span id="lastModified"></span>
+  </p>
+</footer>
 
 </body>
 </html>
