--- a/temples.html
+++ b/temples.html
@@ -34,7 +34,7 @@
   </header>
 
   <main>
-    <h2>Temple Gallery</h2>
+    <h2>Home</h2>
     <div class="grid-container">
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpg" alt="Aba Nigeria Temple" width="300" height="200" loading="lazy">
