--- a/place.html
+++ b/place.html
@@ -15,9 +15,9 @@
   <!-- Responsive hero image -->
   <section class="hero">
     <picture>
-      <source srcset="images/hero-large.jpg" media="(min-width: 900px)" />
-      <source srcset="images/hero-medium.jpg" media="(min-width: 600px)" />
-      <img src="images/hero-small.jpg" alt="Scenic view of St. Peters Basilica" />
+      <source srcset="images/hero-large.webp" media="(min-width: 900px)" />
+      <source srcset="images/hero-medium.webp" media="(min-width: 600px)" />
+      <img src="images/hero-small.webp" alt="Scenic view of St. Peters Basilica" />
     </picture>
   </section>
 
