--- a/place.html
+++ b/place.html
@@ -6,6 +6,10 @@
   <title>Discover Italy</title>
   <link rel="stylesheet" href="styles/place.css" />
   <script src="scripts/place.js" defer></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
