--- a/place.html
+++ b/place.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Discover the beauty and culture of Italy, from its historic landmarks to its delicious cuisine." />
+  <meta name="author" content="Moses Ramirez" />
   <title>Discover Italy</title>
   <link rel="stylesheet" href="styles/place.css" />
   <script src="scripts/place.js" defer></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
