--- a/place.html
+++ b/place.html
@@ -37,7 +37,7 @@
     </section>
 
     <section class="weather">
-      <h2>Weather <span class="icon" aria-hidden="true"></span></h2>
+      <h2>Weather <span class="icon" aria-hidden="true"><img src="images/sun_icon.png"/></span></h2>
       <p><strong>Temperature:</strong> <span id="temperature">68</span> °F</p>
       <p><strong>Wind Speed:</strong> <span id="windspeed">8</span> mph</p>
       <p><strong>Wind Chill:</strong> <span id="windchill">Calculating...</span></p>
