--- a/place.html
+++ b/place.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Discover the beauty and culture of Italy, from its historic landmarks to its delicious cuisine." />
   <meta name="author" content="Moses Ramirez" />
@@ -36,12 +36,17 @@
         <p>Italy, a European country with a long Mediterranean coastline, has left a powerful mark on Western culture and cuisine. Its capital, Rome, is home to the Vatican as well as landmark art and ancient ruins. Other major cities include Florence, with Renaissance masterpieces such as Michelangelo’s "David" and Brunelleschi’s Duomo; Venice, the city of canals; and Milan, Italy’s fashion capital.</p> 
     </section>
 
-    <section class="weather">
-      <h2>Weather <span class="icon" aria-hidden="true"><img src="images/sun_icon.png"/></span></h2>
-      <p><strong>Temperature:</strong> <span id="temperature">68</span> °F</p>
-      <p><strong>Wind Speed:</strong> <span id="windspeed">8</span> mph</p>
-      <p><strong>Wind Chill:</strong> <span id="windchill">Calculating...</span></p>
-    </section>
+   <section class="weather">
+  <h2>
+    Weather
+    <span class="icon" aria-hidden="true">
+      <img src="images/sun_icon.png" alt="" />
+    </span>
+  </h2>
+  <p><strong>Temperature:</strong> <span id="temperature">68</span> °F</p>
+  <p><strong>Wind Speed:</strong> <span id="windspeed">8</span> mph</p>
+  <p><strong>Wind Chill:</strong> <span id="windchill">Calculating...</span></p>
+</section>
   </main>
 
   <footer>
