--- a/place.html
+++ b/place.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Discover the beauty and culture of Italy, from its historic landmarks to its delicious cuisine." />
-  <meta name="author" content="Moses Ramirez" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Discover the beauty and culture of Italy, from its historic landmarks to its delicious cuisine.">
+  <meta name="author" content="Moses Ramirez">
   <title>Discover Italy</title>
 
-  <link rel="stylesheet" href="styles/place.css" />
+  <link rel="stylesheet" href="styles/place.css">
   <script src="scripts/place.js" defer></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
   <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
-
 </head>
+
 <body>
   <header>
     <h1>Welcome to Italy</h1>
@@ -24,23 +23,22 @@
   <!-- Responsive hero image -->
   <section class="hero">
     <picture>
-      <source srcset="images/hero-large.webp" media="(min-width: 900px)" />
-      <source srcset="images/hero-medium.webp" media="(min-width: 600px)" />
-      <img src="images/hero-small.webp" alt="Scenic view of St. Peters Basilica" />
+      <source srcset="images/hero-large.webp" media="(min-width: 900px)"/>
+      <source srcset="images/hero-medium.webp" media="(min-width: 600px)"/>
+      <img src="images/hero-small.webp" alt="Scenic view of St. Peters Basilica"/>
     </picture>
   </section>
 
   <main>
     <section class="intro">
       <h2>About Italy</h2>
-        <p>Italy, a European country with a long Mediterranean coastline, has left a powerful mark on Western culture and cuisine. Its capital, Rome, is home to the Vatican as well as landmark art and ancient ruins. Other major cities include Florence, with Renaissance masterpieces such as Michelangelo’s "David" and Brunelleschi’s Duomo; Venice, the city of canals; and Milan, Italy’s fashion capital.</p> 
+        <p>Italy, a European country with a long Mediterranean coastline, has left a powerful mark on Western culture and cuisine. Its capital, Rome, is home to the Vatican as well as landmark art and ancient ruins. Other major cities include Florence, with Renaissance masterpieces such as Michelangelo's "David" and Brunelleschi's Duomo; Venice, the city of canals; and Milan, Italy's fashion capital.</p> 
     </section>
 
    <section class="weather">
-  <h2>
-    Weather
+  <h2>Weather
     <span class="icon" aria-hidden="true">
-      <img src="images/sun_icon.png" alt="" />
+      <img src="images/sun_icon.png" alt=""/>
     </span>
   </h2>
   <p><strong>Temperature:</strong> <span id="temperature">68</span> °F</p>
