--- a/place.html
+++ b/place.html
@@ -22,28 +22,39 @@
 
   <!-- Responsive hero image -->
   <section class="hero">
+    <h2 class="visually-hidden"></h2> <!-- for accessibility -->
     <picture>
-      <source srcset="images/hero-large.webp" media="(min-width: 900px)"/>
-      <source srcset="images/hero-medium.webp" media="(min-width: 600px)"/>
-      <img src="images/hero-small.webp" alt="Scenic view of St. Peters Basilica"/>
+      <source srcset="images/hero-large.webp" media="(min-width: 900px)">
+      <source srcset="images/hero-medium.webp" media="(min-width: 600px)">
+      <img src="images/hero-small.webp" alt="Scenic view of St. Peters Basilica">
     </picture>
   </section>
 
   <main>
-    <section class="intro">
-      <h2>About Italy</h2>
-        <p>Italy, a European country with a long Mediterranean coastline, has left a powerful mark on Western culture and cuisine. Its capital, Rome, is home to the Vatican as well as landmark art and ancient ruins. Other major cities include Florence, with Renaissance masterpieces such as Michelangelo's "David" and Brunelleschi's Duomo; Venice, the city of canals; and Milan, Italy's fashion capital.</p> 
-    </section>
+    
+    <!-- Floating Data Box -->
+    <div class="hero-box data-box">
+      <h3>Data</h3>
+      <ul>
+        <li><strong>Area:</strong> 301,340 sq km</li>
+        <li><strong>Population:</strong> 60,317,116</li>
+        <li><strong>Capital:</strong> Rome</li>
+        <li><strong>Language:</strong> Italian</li>
+        <li><strong>Currency:</strong> Euro</li>
+        <li><strong>Time Zone:</strong> UTC+1</li>
+        <li><strong>Calling Code:</strong> +39</li>
+      </ul>
+    </div>
 
-   <section class="weather">
-  <h2>Weather
-    <span class="icon" aria-hidden="true">
-      <img src="images/sun_icon.png" alt=""/>
-    </span>
-  </h2>
-  <p><strong>Temperature:</strong> <span id="temperature">68</span> °F</p>
-  <p><strong>Wind Speed:</strong> <span id="windspeed">8</span> mph</p>
-  <p><strong>Wind Chill:</strong> <span id="windchill">Calculating...</span></p>
+    <!-- Floating Weather Box -->
+    <div class="hero-box weather-box">
+      <h3>Weather</h3>
+        
+      <p><strong>Temperature:</strong> <span id="temperature">68</span> °F</p>
+      <p><strong>Wind Speed:</strong> <span id="windspeed">8</span> mph</p>
+      <p><strong>Wind Chill:</strong> <span id="windchill">Calculating...</span></p>
+    </div>
+  </div>
 </section>
   </main>
 
