--- a/place.html
+++ b/place.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Discover the beauty and culture of Italy, from its historic landmarks to its delicious cuisine.">
-  <meta name="author" content="Moses Ramirez">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Discover the beauty and culture of Italy, from its historic landmarks to its delicious cuisine." />
+  <meta name="author" content="Moses Ramirez" />
   <title>Discover Italy</title>
 
-  <link rel="stylesheet" href="styles/place.css">
+  <link rel="stylesheet" href="styles/place.css" />
   <script src="scripts/place.js" defer></script>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,46 +20,48 @@
     <h1>Welcome to Italy</h1>
   </header>
 
-  <!-- Responsive hero image -->
-  <section class="hero">
-    <h2 class="visually-hidden"></h2> <!-- for accessibility -->
-  <main>
-    
-    <!-- Floating Data Box -->
- <section class="hero-container">
- <picture>
-      <source srcset="images/hero-large.webp" media="(min-width: 900px)">
+  <!-- Hero Section -->
+  <section class="hero-container">
+    <!-- Responsive Image -->
+    <picture>
+      <source srcset="images/hero-large.webp" media="(min-width: 1024px)">
       <source srcset="images/hero-medium.webp" media="(min-width: 600px)">
-      <img src="images/hero-small.webp" alt="Scenic view of St. Peters Basilica">
+      <img src="images/hero-small.webp" alt="Scenic view of St. Peter's Basilica" />
     </picture>
 
-  <div class="hero-box data-box">
-    <h3>Data</h3>
-    <ul>
-      <li><strong>Area:</strong> 587,041 sq km</li>
-      <li><strong>Population:</strong> 27,691,018</li>
-      <li><strong>Capital:</strong> Antananarivo</li>
-      <li><strong>Languages:</strong> Malagasy, French</li>
-      <li><strong>Currency:</strong> Malagasy Ariary</li>
-      <li><strong>Time Zone:</strong> UTC+3</li>
-      <li><strong>Calling Code:</strong> +261</li>
-      <li><strong>Internet TLD:</strong> .mg</li>
-    </ul>
-  </div>
+    <!-- Floating Data Box -->
+    <div class="hero-box data-box">
+      <h3>Data</h3>
+      <ul>
+        <li><strong>Area:</strong> 587,041 sq km</li>
+        <li><strong>Population:</strong> 27,691,018</li>
+        <li><strong>Capital:</strong> Antananarivo</li>
+        <li><strong>Languages:</strong> Malagasy, French</li>
+        <li><strong>Currency:</strong> Malagasy Ariary</li>
+        <li><strong>Time Zone:</strong> UTC+3</li>
+        <li><strong>Calling Code:</strong> +261</li>
+        <li><strong>Internet TLD:</strong> .mg</li>
+      </ul>
+    </div>
 
-  <div class="hero-box weather-box">
-    <h3>Weather ☁️</h3>
-    <ul>
-      <li><strong>Temperature:</strong> 10 °C</li>
-      <li><strong>Conditions:</strong> Partly Cloudy</li>
-      <li><strong>Wind:</strong> 5 km/h</li>
-      <li><strong>Wind Chill:</strong> 9.8 °C</li>
-    </ul>
-  </div>
-</section>
+    <!-- Floating Weather Box -->
+    <div class="hero-box weather-box">
+      <h3>Weather ☁️</h3>
+      <ul>
+        <li><strong>Temperature:</strong> 10 °C</li>
+        <li><strong>Conditions:</strong> Partly Cloudy</li>
+        <li><strong>Wind:</strong> 5 km/h</li>
+        <li><strong>Wind Chill:</strong> 9.8 °C</li>
+      </ul>
+    </div>
+  </section>
 
+  <!-- Main Content -->
+  <main>
+    
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; <span id="year"></span> Moses Ramirez</p>
     <p>Last modified: <span id="lastModified"></span></p>
