--- a/place.html
+++ b/place.html
@@ -23,40 +23,39 @@
   <!-- Responsive hero image -->
   <section class="hero">
     <h2 class="visually-hidden"></h2> <!-- for accessibility -->
-  <main>
-  <div>  
-    <!-- Floating Data Box -->
- <section class="hero-container">
     <picture>
-      <source srcset="images/hero-large.webp">
-      <source srcset="images/hero-medium.webp">
+      <source srcset="images/hero-large.webp" media="(min-width: 900px)">
+      <source srcset="images/hero-medium.webp" media="(min-width: 600px)">
       <img src="images/hero-small.webp" alt="Scenic view of St. Peters Basilica">
     </picture>
-
-  <section class="hero-box data-box">
-    <h3>Data</h3>
-    <ul>
-      <li><strong>Area:</strong> 587,041 sq km</li>
-      <li><strong>Population:</strong> 27,691,018</li>
-      <li><strong>Capital:</strong> Antananarivo</li>
-      <li><strong>Languages:</strong> Malagasy, French</li>
-      <li><strong>Currency:</strong> Malagasy Ariary</li>
-      <li><strong>Time Zone:</strong> UTC+3</li>
-      <li><strong>Calling Code:</strong> +261</li>
-      <li><strong>Internet TLD:</strong> .mg</li>
-    </ul>
   </section>
-  <section class="hero-box weather-box">
-    <h3>Weather ☁️</h3>
-    <ul>
-      <li><strong>Temperature:</strong> 10 °C</li>
-      <li><strong>Conditions:</strong> Partly Cloudy</li>
-      <li><strong>Wind:</strong> 5 km/h</li>
-      <li><strong>Wind Chill:</strong> 9.8 °C</li>
-    </ul>
+
+  <main>
+    
+    <!-- Floating Data Box -->
+    <div class="hero-box data-box">
+      <h3>Data</h3>
+      <ul>
+        <li><strong>Area:</strong> 301,340 sq km</li>
+        <li><strong>Population:</strong> 60,317,116</li>
+        <li><strong>Capital:</strong> Rome</li>
+        <li><strong>Language:</strong> Italian</li>
+        <li><strong>Currency:</strong> Euro</li>
+        <li><strong>Time Zone:</strong> UTC+1</li>
+        <li><strong>Calling Code:</strong> +39</li>
+      </ul>
+    </div>
+
+    <!-- Floating Weather Box -->
+    <div class="hero-box weather-box">
+      <h3>Weather</h3>
+        
+      <p><strong>Temperature:</strong> <span id="temperature">68</span> °F</p>
+      <p><strong>Wind Speed:</strong> <span id="windspeed">8</span> mph</p>
+      <p><strong>Wind Chill:</strong> <span id="windchill">Calculating...</span></p>
+    </div>
   </div>
 </section>
-
   </main>
 
   <footer>
