--- a/place.html
+++ b/place.html
@@ -21,18 +21,13 @@
   </header>
 
   <!-- Responsive hero image -->
-  <section class="hero">
-    <h2 class="visually-hidden"></h2> <!-- for accessibility -->
+  <section class="hero-container">
     <picture>
       <source srcset="images/hero-large.webp" media="(min-width: 900px)">
       <source srcset="images/hero-medium.webp" media="(min-width: 600px)">
       <img src="images/hero-small.webp" alt="Scenic view of St. Peters Basilica">
     </picture>
-  </section>
-
-  <main>
-    
-    <!-- Floating Data Box -->
+       <!-- Floating Data Box -->
     <div class="hero-box data-box">
       <h3>Data</h3>
       <ul>
@@ -48,13 +43,14 @@
 
     <!-- Floating Weather Box -->
     <div class="hero-box weather-box">
-      <h3>Weather</h3>
-        
-      <p><strong>Temperature:</strong> <span id="temperature">68</span> °F</p>
-      <p><strong>Wind Speed:</strong> <span id="windspeed">8</span> mph</p>
-      <p><strong>Wind Chill:</strong> <span id="windchill">Calculating...</span></p>
+      <h3>Weather ☁️ </h3>
+      <ul>
+        <li><strong>Temperature:</strong> 10°C</li>
+        <li><strong>Conditions:</strong> Partly Cloudy</li>
+        <li><strong>Wind:</strong> 5 km/h</li>
+        <li><strong>Wind Chill:</strong> 9.8</li>
+      </ul>
     </div>
-  </div>
 </section>
   </main>
 
