--- a/place.html
+++ b/place.html
@@ -17,9 +17,9 @@
 
 <body>
   <header>
-    <h1>Welcome to Italy</h1>
+    <h1>Discover Italy</h1>
   </header>
-
+<main>  </main>
   <!-- Responsive hero image -->
   <section class="hero-container">
     <picture>
@@ -52,8 +52,6 @@
       </ul>
     </div>
 </section>
-  </main>
-
   <footer>
     <p>&copy; <span id="year"></span> Moses Ramirez</p>
     <p>Last modified: <span id="lastModified"></span></p>
