--- a/place.html
+++ b/place.html
@@ -43,7 +43,8 @@
 
     <!-- Floating Weather Box -->
     <div class="hero-box weather-box">
-      <h3>Weather ☁️ </h3>
+     <h3>Weathe<span class="weather-icon-wrap">r<img class="weather-icon" src="images/cloudy.icon.svg" alt="Cloudy Icon" style="width: 30px;height: auto;"></span></h3>
+
       <ul>
         <li><strong>Temperature:</strong> 10°C</li>
         <li><strong>Conditions:</strong> Partly Cloudy</li>
@@ -53,7 +54,7 @@
     </div>
 </section>
   <footer>
-    <p>&copy; <span id="year"></span> Moses Ramirez</p>
+    <p>&copy; <span id="year"></span> Moses Ramirez      🍕Italy🍕 </p>
     <p>Last modified: <span id="lastModified"></span></p>
   </footer>
 </body>
