--- a/place.html
+++ b/place.html
@@ -43,8 +43,11 @@
 
     <!-- Floating Weather Box -->
     <div class="hero-box weather-box">
-     <h3>Weathe<span class="weather-icon-wrap">r<img class="weather-icon" src="images/cloudy.icon.svg" alt="Cloudy Icon" style="width: 30px;height: auto;"></span></h3>
-
+    <h3>
+  Weathe<span class="weather-icon-wrap">r
+    <img class="weather-icon" src="images/cloudy.icon.webp" alt="Cloudy Icon">
+  </span>
+</h3>
       <ul>
         <li><strong>Temperature:</strong> 10°C</li>
         <li><strong>Conditions:</strong> Partly Cloudy</li>
