--- a/place.html
+++ b/place.html
@@ -43,9 +43,14 @@
 
     <!-- Floating Weather Box -->
     <div class="hero-box weather-box">
-    <h3>
+  <h3>
   Weathe<span class="weather-icon-wrap">r
-    <img class="weather-icon" src="images/cloudy.icon.webp" alt="Cloudy Icon">
+    <img 
+      class="weather-icon" 
+      src="images/cloudy.icon.webp" 
+      srcset="images/cloudy.icon.svg 767w, images/cloudy.icon.webp 768w"
+      sizes="(max-width: 767px) 30px, 30px"
+      alt="Cloudy Icon">
   </span>
 </h3>
       <ul>
