--- a/place.html
+++ b/place.html
@@ -62,7 +62,8 @@
     </div>
 </section>
   <footer>
-    <p>&copy; <span id="year"></span> Moses Ramirez      🍕Italy🍕 </p>
+    <p>&copy; <span id="year"></span> Moses Ramirez</p>
+    <p>🍕Italy🍕 </p>
     <p>Last modified: <span id="lastModified"></span></p>
   </footer>
 </body>
