--- a/week04/lazyload.html
+++ b/week04/lazyload.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lazy Load</title>
-    <meta name="description" content 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="Moses Ramirez">
+  <title>Lazy Load</title>
+  <link rel="stylesheet" href="styles/lazyload.css" media="all">
+
 </head>
+
 <body>
-    
+
+  <header>
+    <h1>Lazy Load Demonstration</h1>
+ 
+  </header>
+
+  <main>
+    <picture>
+        <img src="images/white_kitty.jpg" alt="Place Holder Kitten Image" loading="lazy" 
+        width="200" height="300">
+    </picture>
+    <picture></picture>
+    <img src="images/kitties_basket.webp" alt="Place Holder Kitten Image" loading="lazy" 
+        width="250" height="350">
+    <picture></picture>
+    <img src="images/kitty_two.jpg" alt="Place Holder Kitten Image" loading="lazy" 
+        width="300" height="400">
+  </main>
+
+<footer>
+  <p>
+    </h2>
+ 
+  </p>
+</footer>
+
 </body>
 </html>
+
+<</p>
