--- a/week04/lazyload.html
+++ b/week04/lazyload.html
@@ -13,7 +13,7 @@
 <body>
 
   <header>
-    <h1>Lazy Load Demonstration</h1>
+    <h1>Lazy Load Demonstration With PC's</h1>
  
   </header>
 
@@ -32,12 +32,9 @@
 
 <footer>
   <p>
-    </h2>
- 
+    &copy; 2024 by Moses Ramirez. All rights reserved.
   </p>
 </footer>
 
 </body>
 </html>
-
-<</p>
