--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -9,9 +9,11 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=..." onload="this.onload=null;this.rel='stylesheet'">
+
+
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" onload="this.onload=null;this.rel='stylesheet'">
 <noscript>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=...">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap">
 </noscript>
 
 
