--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -7,14 +7,13 @@
   <meta name="author" content="Moses Ramirez">
   <title>Temple Album</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" onload="this.onload=null;this.rel='stylesheet'">
-<noscript>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap">
-</noscript>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
+
 
 
   <link rel="stylesheet" href="styles/filtered-temples.css" media="all">
