--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -5,23 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A gallery of temple images with responsive design and a hamburger menu.">
   <meta name="author" content="Moses Ramirez">
-  <title>Temple Album</title>
+    <title>Temple Album</title>
 
- 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
-
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:opsz@18..144&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=TASA+Explorer:wght@400..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/filtered-temples.css" media="all">
   <link rel="stylesheet" href="styles/filtered-temples-large.css" media="print" onload="this.media='(min-width: 768px)'">
 
+
   <script src="scripts/filtered-temples.js" defer></script>
 </head>
-
 
 <body>
 
