--- a/project/site_plan.html
+++ b/project/site_plan.html
@@ -41,16 +41,12 @@
   <!-- Info Box -->
   <div class="info-box">
     <section>
-      <h2>What we are about.</h2>
+      <h2>What we are about</h2>
       <p>Snack Time Hub is your go-to destination for delicious snacks and treats.</p>
-    </section>
-
-    <section>
-      <h2>About</h2>
-      <p>
-        Snack Time Hub is a digital destination for snack lovers of all ages. 
+      <p>Snack Time Hub is a digital destination for snack lovers of all ages.
         The site provides snack recipes, product reviews, healthy alternatives, and creative snack ideas for different occasions. 
-        It serves as a fun, informative resource where users can discover new snacks, learn how to make them, and share their favorites with a snack-loving community.
+        It serves as a fun, informative resource where users can discover new snacks, learn how to make them, and share their favorites with a snack-loving community.  It's a place to celebrate the joy of snacking!  
+        Come join us and make every snack time a delightful experience!
       </p>
     </section>
   </div>
@@ -80,16 +76,16 @@
       </thead>
       <tbody>
         <tr>
-          <td>Weekly Snacks</td>
-          <td>A new recipe every week!</td>
+          <td>Daily Snacks</td>
+          <td>A new snack idea every day! Try something new.</td>
         </tr>
         <tr>
-          <td>Monthly Treat Box</td>
-          <td>Handpicked recipes each month.</td>
+          <td>Weekly Snacks</td>
+          <td>Handpicked recipes each week, to keep your snack game strong.</td>
         </tr>
         <tr>
           <td>Seasonal Specials</td>
-          <td>Holiday and seasonal snack ideas.</td>
+          <td>Holiday and seasonal snack ideas. Any holiday, any season! We've got you covered. From Halloween treats to Christmas cookies, and everything in between.</td>
         </tr>
       </tbody>
     </table>
@@ -106,12 +102,12 @@
 
           <label>
             <input type="radio" name="subscription" value="weekly" required>
-            Weekly Snacks - A new recipe every week!
+            Daily Snacks - A new snack idea every day!
           </label><br>
 
           <label>
             <input type="radio" name="subscription" value="monthly">
-            Monthly Treat Box - Handpicked recipes each month.
+            Weekly Snacks - To keep every week different and exciting.
           </label><br>
 
           <label>
