--- a/form.html
+++ b/form.html
@@ -61,7 +61,7 @@
 
       <fieldset>
         <legend>Which features did you find useful in the product?<br><small>(Check all that apply)</small></legend>
-        <div class="checkbox-group" required>
+        <div class="checkbox-group">
           <label><input type="checkbox" name="features" value="Durability"> Durability</label>
           <label><input type="checkbox" name="features" value="Ease of Use"> Ease of Use</label>
           <label><input type="checkbox" name="features" value="Performance"> Performance</label>
