--- a/project/snack_hub.html
+++ b/project/snack_hub.html
@@ -10,8 +10,8 @@
 
     <title>Snack Time Hub</title>
 
-    <link rel="stylesheet" href="site_plan.css">
-    <script src="site_plan.js" defer></script>
+    <link rel="stylesheet" href="snack_hub.css">
+    <script src="snack_hub.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
